Added all of the functionality to the prisma database instance. Definitely a much more solid understanding of how this works

--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -9,3 +9,8 @@ datamodel: datamodel.prisma
 generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client
+
+# Auto generates new client after update to datamodel 
+hooks:
+  post-deploy:
+    - prisma generate
